Node values visually reset when changed #60900

Closed
opened 2019-01-26 21:34:59 +01:00 by msalv · 9 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia 1060 6gb

Blender Version
Broken: blender-2.80.0-git.1b6da95ccb11-windows64

Short description of error
ezgif.com-video-to-gif.gif

Under certain circumstances, changing the value of a node snaps back to the previous value, although this is just the UI, the actual value has changed but it doesn't update in the UI. It only applies to nodes not plugged to the Material output, or to a tree that eventually plugs to the Material output

Exact steps for others to reproduce the error
I know of two ways to trigger this bug

1: Add a material, and add a node. Make sure to not connect it to the Material Output node. Insert a keyframe on a value of the node, press play and stop the animation, and delete the keyframe of the node value. Now all the values of all the nodes (that aren't plugged to the Material output) will reset when you try to drag the sliders or type in them
2: Any new node you insert from the add menu will behave fine. Plug any of the other nodes that you know have the bug on the material output. That node will update, but the rest of the nodes will bug, including the new ones

Apart from plugging the nodes to the output or a tree connected to the output, another way of working around this is to change the name of the node in the N sidebar

You can use this blend file to play with it. The bug gets saved on the file
bugreport8.blend

**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia 1060 6gb **Blender Version** Broken: blender-2.80.0-git.1b6da95ccb11-windows64 **Short description of error** ![ezgif.com-video-to-gif.gif](https://archive.blender.org/developer/F6414026/ezgif.com-video-to-gif.gif) Under certain circumstances, changing the value of a node snaps back to the previous value, although this is just the UI, the actual value has changed but it doesn't update in the UI. It only applies to nodes not plugged to the Material output, or to a tree that eventually plugs to the Material output **Exact steps for others to reproduce the error** I know of two ways to trigger this bug 1: Add a material, and add a node. Make sure to not connect it to the Material Output node. Insert a keyframe on a value of the node, press play and stop the animation, and delete the keyframe of the node value. Now all the values of all the nodes (that aren't plugged to the Material output) will reset when you try to drag the sliders or type in them 2: Any new node you insert from the add menu will behave fine. Plug any of the other nodes that you know have the bug on the material output. That node will update, but the rest of the nodes will bug, including the new ones Apart from plugging the nodes to the output or a tree connected to the output, another way of working around this is to change the name of the node in the N sidebar You can use this blend file to play with it. The bug gets saved on the file [bugreport8.blend](https://archive.blender.org/developer/F6414091/bugreport8.blend)
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

might be related to studio/blender-studio#59495

might be related to studio/blender-studio#59495

Added subscriber: @you.le

Added subscriber: @you.le

I can reproduce this bug.
Here is another test file: keyshading.blend

I don't know how to "fix" it but I noticed that we can sliders are not reseted applying one of these patches:

1 -> commenting something in node_draw.c : p.diff
2 -> changing something in deg_eval_copy_on_write.cc :
p2.diff

I can reproduce this bug. Here is another test file: [keyshading.blend](https://archive.blender.org/developer/F6598746/keyshading.blend) I don't know how to "fix" it but I noticed that we can sliders are not reseted applying one of these patches: 1 -> commenting something in node_draw.c : [p.diff](https://archive.blender.org/developer/F6598765/p.diff) 2 -> changing something in deg_eval_copy_on_write.cc : [p2.diff](https://archive.blender.org/developer/F6598774/p2.diff)
Brecht Van Lommel was assigned by Philipp Oeser 2019-03-04 15:20:04 +01:00
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

since @brecht did 83f8f44791, assigning to him...

since @brecht did 83f8f44791, assigning to him...

This issue was referenced by 89fa6a7a06

This issue was referenced by 89fa6a7a063e74604c14aedef9b88599249e3a29

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60900
No description provided.